--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-math-mcp"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Nora Holmes"]
 license = "MIT"
@@ -12,13 +12,19 @@ name = "rust_math_mcp"
 path = "src/lib.rs"
 
 [dependencies]
+# Official MCP SDK
+rmcp = { version = "0.8", features = ["server", "macros", "transport-io", "schemars"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
+
+# Serialization and schema generation
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+schemars = "0.8"
+
+# Error handling and logging
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-thiserror = "1.0"
-once_cell = "1.19"
 
 [dev-dependencies]
 proptest = "1.4"
